--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -48,7 +48,7 @@
 }
 
 .about-row{
-    height: 500px;
+    /* height: 500px; */
 }
 
 .about-image{
@@ -85,4 +85,13 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+}
+
+@media screen and (max-width:576px) and (min-width:300px) {
+
+    .resume-button-block{
+        display: flex;
+        justify-content: center;
+    }
+
 }
