--- a/src/components/projectAccordium/Accordium.css
+++ b/src/components/projectAccordium/Accordium.css
@@ -29,3 +29,10 @@
     margin: 0px;
     padding: 0px;
 }
+
+@media screen and (max-width:768px) and (min-width:576px) {
+    .exp-text-block {
+        margin: 16px 0px;
+        padding: 32px;
+    }
+}
