--- a/src/components/workExp/WorkExp.css
+++ b/src/components/workExp/WorkExp.css
@@ -40,3 +40,11 @@
     font-size: 20px;
     font-weight: 600;
 }
+
+@media screen and (max-width:576px) and (min-width:300px) {
+    .exp-text-block{
+        margin: 16px 16px;
+        padding: 16px;
+        background-color: rgb(157, 219, 253);
+    }
+}
